flecs_ecs/tests/compile_fail/query_non_send_not_send.stderr
error[E0277]: `Rc<i32>` cannot be shared between threads safely
  --> tests/compile_fail/query_non_send_not_send.rs:16:24
   |
16 |       std::thread::spawn(move || {
   |  _____------------------_^
   | |     |
   | |     required by a bound introduced by this call
17 | |         query.each(|handle| {
18 | |             let _ = &handle.value;
19 | |         });
20 | |     });
   | |_____^ `Rc<i32>` cannot be shared between threads safely
   |
   = help: within `NonSendHandle`, the trait `Sync` is not implemented for `Rc<i32>`
note: required because it appears within the type `NonSendHandle`
  --> tests/compile_fail/query_non_send_not_send.rs:9:8
   |
 9 | struct NonSendHandle {
   |        ^^^^^^^^^^^^^
   = note: required for `&'w NonSendHandle` to implement `for<'w> Send`
   = note: 1 redundant requirement hidden
   = note: required for `flecs_ecs::core::Query<&NonSendHandle>` to implement `Send`
note: required because it's used within this closure
  --> tests/compile_fail/query_non_send_not_send.rs:16:24
   |
16 |     std::thread::spawn(move || {
   |                        ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/functions.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`
